# dhlibs

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE.md  README.md  main.py  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  release.yaml
dhlibs/: __init__.py  alias_callable.py  indices.py  randfunc.py
dhlibs/cachedop/: __init__.py  _typings.py  _utils.py  audit.py  audit.pyi  core.py  core.pyi
dhlibs/reprfmt/: __init__.py  constants.py  core.py  deco.py  dispatchers.py  options.py  utils.py
dhlibs/reprfmt/formatters/: __init__.py  base.py  default.py  others.py  useful.py
tests/: __init__.py  test_alias_callable.py  test_cachedop.py  test_indices.py  test_options.py  test_randfunc.py
