[tool.poetry]
name = "dhlibs"
version = "0.1.0"
description = ""
authors = ["DinhHuy2010 <huy04052010@outlook.com>"]
repository = "https://github.com/DinhHuy2010/dhlibs"
readme = "README.md"
packages = [{include = "dhlibs"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.ruff]
indent-width = 4  # Force 4 spaces per indentation level
line-length = 120  # Set maximum line length to 100 characters

[tool.ruff.lint]
# List of error codes to ignore
# Select specific classes of rules to apply
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "ARG",
    "SIM",
    "PTH",
    "PL"
]
ignore = [
    "W291", # Trailing whitespace
    "E501", # Line too long
    # "W292", # No newline at end of file
    "W293",  # Blank line contains whitespace
    "PLR0912", # Too many branches
    "PLR2004", # Magic values
    "PLR0915", # Too many statements
    "PLW0603", # Global statement
    "PLR0913" # Too many arguments
]

[tool.pyright]
# strict for absoulte clean code™
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
