[tool.poetry]
name = "dhlibs"
version = "0.1.1"
description = "dhlibs - random libraries that you shouldn't care"
authors = ["DinhHuy2010 <huy04052010@outlook.com>"]
repository = "https://github.com/DinhHuy2010/dhlibs"
readme = "README.md"
packages = [{ include = "dhlibs" }]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.12.2"
more-itertools = "^10.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pytest = "^8.3.2"
tox = "^4.18.0"
tox-gh-actions = "^3.2.0"
pyright = "^1.1.378"
coverage = "^7.6.1"

[tool.ruff]
cache-dir = ".cache/ruff"
indent-width = 4          # Force 4 spaces per indentation level
line-length = 120         # Set maximum line length to 100 characters
target-version = "py39"

[tool.ruff.lint]
# List of error codes to ignore
# Select specific classes of rules to apply
select = ["C", "E", "W", "F", "I", "B", "C4", "ARG", "SIM", "PTH", "PL", "TID"]
ignore = [
    "W291",    # Trailing whitespace
    "E501",    # Line too long
    "W293",    # Blank line contains whitespace
    "PLR0912", # Too many branches
    "PLR2004", # Magic values
    "PLR0915", # Too many statements
    "PLW0603", # Global statement
    "PLR0913", # Too many arguments
    "B010",    # setattr
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
banned-api."typing".msg = "Use typing_extensions instead"

[tool.pyright]
# strict for absoulte clean code™
typeCheckingMode = "strict"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
addopts = "--verbose --import-mode importlib"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311

[gh-actions]
python = 
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
description = "run lint and tests"
allowlist_externals = poetry
commands_pre =
    poetry install --no-root --sync
commands = 
    poetry run ruff check dhlibs/
    poetry run pyright dhlibs/
    poetry run coverage run -m pytest
    poetry run coverage report -m
"""

[tool.coverage.report]
omit = ["dhlibs/reprfmt/*", "dhlibs/cachedop/*", "tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
